--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">CCQF Misson</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_doc">Doc</string>
+    <string name="action_nouveau">Nouveau</string>
 </resources>
